# training

./: .gitignore  LICENSE  README.md
CDDP/sample1/: backwardpass.jl  dynamics_unicycle_motion_con.jl  forwardpass.jl  ipddp.jl  test_ipddp.jl
DDP/sample1/: tets.jl  untitled1.jl  untitled2.jl  untitled3.jl
HM-iLQR/sample1/: ALM-iLQR.jl  HM-iLQR.jl  M-iLQR-old.jl  M-iLQR-old2.jl  M-iLQR-old3.jl  M-iLQR.jl  RLBM-iLQR.jl  func.jl
HM-iLQR/sample2/: ALM-iLQR.jl  HM-iLQR.jl  M-iLQR.jl  RLBM-iLQR.jl  func.jl  main.jl
HM-iLQR/sample3/: ALM-iLQR.jl  HM-iLQR.jl  M-iLQR.jl  func.jl  main.jl
HM-iLQR/sample4/: ALM-iLQR.jl  M-iLQR copy.jl  M-iLQR.jl  RLBM-iLQR.jl  func.jl  main.jl
IPDDP/: Untitled.ipynb  slide1.pptx
IPDDP/sample1/: untitled1.jl  untitled2.jl  untitled3.jl
IPDDP/sample1.1/: untitled1.jl  untitled2.jl
IPDDP/sample1.2/: untitled2.jl
IPDDP/sample2/: untitled1.jl
JUMP/julia/: file.txt
OSQP/julia/: untitled-1.jl
OpEn/rust/: Cargo.toml
SLSQP/rust/: .gitignore
g_xx/c/: int  int.cpp  legendre.h  main  main.cpp
spectral/c/: a.out  (+2 more)
sympletic/: reference  reference.md
sympletic/rust/: .gitignore  Cargo.toml  build.rs  foo.csv
sympletic/rust/plot/: plot.ipynb
sympletic/rust/src/: Julian.rs  Moon.rs  c_kernel.rs  component.rs  lib.rs  macros.rs  main.rs  tester.rs
sympletic/rust/src/component/: Julian.rs  PhyQty.rs  Vec3.rs  VecL.rs  VecN.rs  fft.rs  interval.rs  moons.rs  rk4_fehlberg.rs
sympletic/rust/src/component/VecL/: Vec3 copy.rs  Vec3.rs
sympletic/rust/src/component/interval/: circle.rs  gmp.rs  interval.rs  mem.rs  mpfi.rs  mpfr.rs
(+93 files in other folders)
