[package]
name = "rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
chrono = "0.4.23"
csv = "1.1.6"
rustfft = "6.1.0"
syn = "1.0.107"
proc-macro2 = "1.0.49"
quote = "1.0.23"

[build-dependencies]
bindgen = "0.63.0"
cc = "1.0.77"

[lib]
proc-macro = true